Titulo principal mudado

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main id="page-content">
         <article id="animals-choices">
-            <h1 id="special-title" tabindex="0">Escolha um animal</h1>
+            <h1 id="special-title" tabindex="0">Escolha um animal abaixo</h1>
             <!-- Passaro -->
                 <picture>
                     <source media="(max-width: 400px)" srcset="./content/animals/bird(m).png">
