Atualizei o meta kw

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="ZoolícoDigitalGabriel PasseioDigitalGabrielZ7">
+    <meta name="keywords" content="ZoológicoDigitalGabriel">
     <meta name="description" content="O zoo digital é um site feito para mostrar detalhes, fotos, sons e vídeos de animais sem que precise de uma visita ao zoológico para isso!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zoo digital</title>
