Isso foi um erro

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <img src="./content/animals/croc.png" alt="Imagem de um crocodilo de plastico" title="Crocodilo" id="croc-image"></a>
             </picture>
         </article>
+	<img src="./content/img.jpg" width="200px"alt="">
     </main>
     <!--Rodapé-->
     <footer id="page-footer">
