Adicionei uma logo em png
Adicionei uma logo em png, e alterei o nome das pastas: styles -> style-sheets e pages -> web-pages.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="O zoo digital é um site feito para mostrar detalhes, fotos, sons e vídeos de animais sem que precise de uma visita ao zoológico para isso!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zoo digital</title>
-    <link rel="stylesheet" href="./styles/fonts.css">
-    <link rel="stylesheet" href="./styles/style.css">    
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles-sheets/fonts.css">
+    <link rel="stylesheet" href="./styles-sheets/style.css">    
+    <link rel="stylesheet" href="./styles-sheets/index.css">
     <link rel="shortcut icon" href="./content/website-images/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="./content/website-images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./content/website-images/favicon-32x32.png">
@@ -16,10 +16,10 @@
 </head>
 <body>
     <header id="page-header">
-        <picture>
+        <picture> 
             <a href="./index.html" rel="internal">
-                <source media="(max-width: 300px)" srcset="./content/website-images/logo-p.svg">
-                <img src="./content/website-images/logo.svg" alt="Logo do zoo digital" title="logo do zoo.com" width="300px" height="100px"></a>
+                <source media="(max-width: 400px)" srcset="./content/website-images/logo.png"/>
+                <img src="./content/website-images/logo.svg" alt="Logo do zoo digital" title="logo do zoo.com" width="400px" height="100px"/></a>
         </picture>
     </header>
     <main id="page-content">
